chatbot/bak/nai-chatapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nai-chatapp
  namespace: chat
  labels:
    app: nai-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nai-chatapp
  template:
    metadata:
      labels:
        app: nai-chatapp
    spec:
      containers:
      - name: nai-chatapp
        image: johnugeorge/nai-chatapp:0.12
        ports:
        - containerPort: 8502
        resources:
      limits:
        cpu: "1"
        memory: "100Mi"
      requests:
        cpu: "0.5"
        memory: "50Mi"
